+ Largely reorganized render code in order to improve geometry culling and minimize allocations.

--- a/Tutorial0/Tutorial0.vcxproj
+++ b/Tutorial0/Tutorial0.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="application_draw.cpp" />
     <ClCompile Include="application_main.cpp" />
     <ClCompile Include="application_setup.cpp" />
   </ItemGroup>
@@ -92,6 +93,7 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(ProjectDir)..\..\$(Platform).$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\..\obj\$(Platform).$(Configuration)\$(ProjectName)\</IntDir>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
