--- a/Tutorial4/Tutorial4.vcxproj
+++ b/Tutorial4/Tutorial4.vcxproj
@@ -157,9 +157,11 @@
     <ClCompile Include="application_draw.cpp" />
     <ClCompile Include="application_main.cpp" />
     <ClCompile Include="application_setup.cpp" />
+    <ClCompile Include="terrain_gnd.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
+    <ClInclude Include="terrain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
