--- a/Tutorial2/Tutorial2.vcxproj
+++ b/Tutorial2/Tutorial2.vcxproj
@@ -32,6 +32,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Tutorial2</RootNamespace>
     <ProjectName>Tutorial2 (Textures)</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
