--- a/Tutorial4/Tutorial4.vcxproj
+++ b/Tutorial4/Tutorial4.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{6B44A722-8F11-4B62-896C-DDAAF3E7C142}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Tutorial4</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
